Changes in version 2.1.5-9001 ( Release date: )
==============

Changes in version 2.1.5 ( Release date: 2018-06-28)
==============

Changes:
* Add functionality to `getBestFeatures` to allow `edgeR` for DE, as well as weights used with `edgeR` for `zinbwave` compatability. As part of this change:
	- Removed `isCount` argument and replaced with more fine-grained `DEMethod` argument in `getBestFeatures`, `mergeClusters`; or `mergeDEMethod` in `RSEC`.
	- *Change to class definition*: added slot `merge_demethod` to keep track of the DE method used in merging
* Change function names (old function name is now depricated):
	- `combineMany` -> `makeConsensus`
	- `removeUnclustered` -> `removeUnassigned`
* Arguments to functions changed:
	- `combineProportion` -> `consensusProportion` in `RSEC`
	- `combineMinSize` -> `consensusMinSize` in `RSEC`
  - `sampleData` -> `colData` to match `SummarizedExperiment` syntax (in many plotting functions). 
	- `alignSampleData` -> `alignColData` in `plotHeatmap`
  - `ignoreUnassignedVar` -> `filterIgnoresUnassigned` in `mergeClusters` (and other functions) for clarity.
	- `removeNegative` -> `removeUnassigned` in `getBestFeatures` for uniformity
	-  Removed `largeDataset` option to `subsampleClustering` because no longer provides advantage.
	- `nBlank` -> `nBlankFeatures` in `makeBlankData` to allow for samples
* Created functions:
  - `primaryClusterLabel` and `primaryClusterType`
  - `getReducedData` 
  - `assignUnassigned`: assigns unassigned samples to nearest cluster
	- `renameClusters` and `recolorClusters`: assign new names/colors to clusters within a particular clustering
  - `clusterMatrixColors`: wrapper to `convertClusterLegend` to return matrix like `clusterMatrix` only with colors in place of the internal cluster ids (like existing `clusterMatrixNamed`)
	- `plotClustersTable` for plotting a heatmap showing the results of `tableClusters`